# binance_crypto_data_platform

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  assignment_description.md  deploy.sh  docker-compose.yml  dockerfile.api  dockerfile.api.lambda  dockerfile.dashboard  dockerfile.ingest  dockerfile.ingest.lambda  main.py  pyproject.toml
infra/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  requirements.txt
k8s/: api-deployment.yaml  api-service.yaml  dashboard-deployment.yaml  dashboard-service.yaml  ingest-job.yaml  postgres-deployment.yaml
notes/: README.md  aws-deploy.md  aws-operations.md  docker.md  kubernetes.md  local.md
runbooks/: README.md  aws-deploy.md  aws-operations.md  docker.md  local.md
src/: api.py  dashboard.py  fast_api.py  fetch_and_ingest.py  models.py
test/: test_fetch_and_ingest.py
