[project]
name = "binance-crypto-data-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.138.0",
    "psycopg2>=2.9.12",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]
